# JBT

./: .gitignore  .mcp.json  .roomodes  ATLAS_PROMPT.md  CLAUDE.md  DEPLOY_MINUTE_KLINE_FIX.sh  JBT-Control.code-workspace  PROJECT_CONTEXT.md  README.md  RESEARCHER_AGENT_REPORT_20260421.md  TASK-0120-测试结果报告.md  WORKFLOW.md  check_futures_data.sh  diagnose_alienware.sh  docker-compose.dev.yml  docker-compose.mac.override.yml  docker-compose.studio.override.yml  optimization_log_20260423_151224.txt  optimization_log_20260423_151305.txt  test_minute_kline_fix.py  test_notifications.py
services/decision/: .env.example  .gitignore  Dockerfile  README.md  batch_evaluate_strategies.py  optimize_cf.py  optimize_test_strategy.py  pyproject.toml  test_feishu_direct.py  test_feishu_email.py  test_feishu_rich_data.py  test_notification_e2e.py  test_researcher_evaluation.py
services/decision/decision_web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
services/decision/scripts/: generate_llm_strategies_palm.py  generate_palm_strategies.py  run_full_pipeline_35_symbols.py  run_template_seed_baseline_pipeline.py  run_tuning_pipeline.py
services/decision/src/: main.py
services/decision/strategies/: Atlas_Import_Check.yaml
services/decision/test_strategies/: test_strategy_b.yaml  test_strategy_d.yaml  test_strategy_d_optimized.yaml  test_strategy_s.yaml
services/decision/tests/: test_api_auth.py  test_batch_evaluate.py  test_decision_service.py  test_evening_rotation.py  test_factor_mining.py  test_factor_sync.py  test_failover.py  test_gating.py  (+31 more)
(+3994 files in other folders)
